--- a/jpashop/pom.xml
+++ b/jpashop/pom.xml
@@ -8,6 +8,23 @@
     <artifactId>jpashop</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <!-- 라이브러리 추가 -->
+    <dependencies>
+        <!-- JPA 하이버네이트 -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>5.3.10.Final</version>
+        </dependency>
+        <!-- H2 데이터베이스 -->
+
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.199</version>
+        </dependency>
+    </dependencies>
+
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
