--- a/ex1-hello-jpa/pom.xml
+++ b/ex1-hello-jpa/pom.xml
@@ -14,7 +14,8 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
-            <version>5.3.10.Final</version>
+<!--        Drop Table 관련 에러 수정         -->
+            <version>5.4.13.Final</version>
         </dependency>
         <!-- H2 데이터베이스 -->
 
